# PKU_machine_learning_term_proj

./: README.md  draw_theta_image.py  ilc.py  main.py  test_2d.py  test_3d.py  utils.py
c++/: CMakeLists.txt  ilc.cpp  main.cpp  utils.cpp
